[tool.poetry]
name = "barfi"
version = "0.8.0"
description = "Graphical programming framework for AI and data apps."
license = "MIT"
authors = ["Adithya Krishnan <krishsandeep@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/krish-adi/barfi"
repository = "https://github.com/krish-adi/barfi"
documentation = "https://github.com/krish-adi/barfi"
keywords = ["python", "streamlit", "graphical programming", "AI", "LLM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [{ include = "barfi", from = "src" }]

[tool.poetry.package]
include = ["barfi/static/*"]

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
