[project]
name = "barfi"
version = "1.0.1"
description = "Framework for building custom visual no-code workflows for AI and data apps. Also commonly known as: graphical flow based programming framework"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [
    {name = "Adithya Krishnan",email = "krishsandeep@gmail.com"}
]
keywords = ["no-code", "framework", "streamlit", "graphical programming", "AI", "LLM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/krish-adi/barfi"
repository = "https://github.com/krish-adi/barfi"
documentation = "https://github.com/krish-adi/barfi"
"Bug Tracker" = "https://github.com/krish-adi/barfi/issues"
requires-python = ">=3.9,!=3.9.7"
dependencies = [
]


[project.optional-dependencies]
streamlit = [ "streamlit>=1.0.0" ]
deprecated-v0 = [ "networkx>=3.1", "streamlit>=1.37.1" ]


[tool.poetry]
packages = [{include = "barfi", from = "src"}]
include = ["src/barfi/v0/static/*", "src/barfi/flow/streamlit/static/*"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.3"
pytest-asyncio = "^0.25.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
